# agoge-forger

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: julia_smoke_test.yml  python_smoke_test.yml  rust_smoke_test.yml  serverless_smoke_test.yml
.kilo/plans/: 1779925854778-curious-cactus.md
configs/: gka_hqwen3_reasoner_qlora.yaml  local_rtx5080_16gb.yaml  nemotron_3_nano_4b_qlora.yaml  smoke_test.yaml
cuda/: README.md  setup.py
cuda/kernels/: agoge_dummy_kernel.cpp  agoge_dummy_kernel.cu
datasets/: README.md
datasets/samples/: tiny_sft.jsonl
docs/: artifacts_and_safetensors.md  chat_completions_providers.md  ci_smoke_tests.md  dependency_policy.md  limen_neural_integrations.md  lora_target_discovery.md  model_config_validation.md  rtx5080_local_training.md  serverless_smoke_test.md
infra/: README.md
infra/terraform/: README.md
rust-tools/: Cargo.toml  README.md
rust-tools/crates/agoge-cli/: Cargo.toml
rust-tools/crates/agoge-cli/src/: main.rs
rust-tools/crates/agoge-gguf/: Cargo.toml
rust-tools/crates/agoge-gguf/src/: lib.rs
rust-tools/crates/agoge-jsonl/: Cargo.toml
rust-tools/crates/agoge-jsonl/src/: lib.rs
rust-tools/examples/: validate_jsonl.rs
scripts/: check_env.py  check_jax_gpu.py  check_torch_cuda.py  inspect_lora_targets.py  inspect_model.py  inspect_safetensors.py  merge_adapter.py  serverless_smoke_test.py  smoke_eval.py  smoke_test.py  train_lora.py  train_qlora.py
tests/: test_artifacts.py  test_chat_completions_provider.py  test_config.py  test_dataset_validation.py  test_datasets_strict.py  test_manifest.py  test_preflight.py
(+50 files in other folders)
