[workspace]
members = [
    "crates/agoge-cli",
    "crates/agoge-jsonl",
    "crates/agoge-gguf"
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Future Optional Dependencies (Not yet wired)
# burn = { version = "0.13.0" }
# candle-core = { version = "0.5.0" }
# dfdx = { version = "0.13.0" }
# ort = { version = "2.0.0-rc.2" }
# rl = { version = "0.0.1" }
# perf-rs = { version = "0.0.1" }
# axolotl-rs = { version = "0.0.1" }
# aprender = { version = "0.0.1" }
